--- a/debian/rules
+++ b/debian/rules
@@ -4,4 +4,4 @@ export DH_VERBOSE=1
 export PYBUILD_NAME=arpreq
 
 %:
-	dh $@ --with python2,python3,pypy --buildsystem pybuild
+	dh $@ --with python3,pypy --buildsystem pybuild
